Switch to Java 21 (LTS) and update to parent version (21.0.0) #102